# chill-with-kiritan

./: .gitignore  README.md  README_DISTRIBUTION_JP.md  README_SOURCE_JP.md  Run_All.bat  Run_BPM_Lab.bat  Run_Companion.bat  Run_Dev_All.bat  Run_UI.bat  Run_Wallpaper.bat  理想形.txt
.claude/: launch.json
01_wallpaper/: .gitignore  MOTION_AUTHORING_GUIDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
02_ui-overlay/: README.md  index.html  package-lock.json  package.json
03_companion/: index.html  package-lock.json  package.json
03_companion/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
03_companion/src-tauri/src/: api.rs  built_in_ui_presets.json  lib.rs  lyrics_cache.rs  main.rs  models.rs  pcm_capture.rs  personal_news.rs  services.rs  startup.rs  state.rs  tasks.rs
03_companion/src-tauri/tests/: api_test.rs
04_bpm-lab/: README_JP.md  index.html  package-lock.json  package.json  tsconfig.json
docs/: AUDIO_SPECTRUM_PANEL_PLAN_2026-07-18.md  BPM_ALGORITHM_RESEARCH_2026-07-21.md  COMPANION_UI_REDESIGN_PLAN_2026-07-08.md  COMPANION_UI_V0.8.2_PLAN_2026-07-09.md  COMPLETION_AUDIT_2026-07-01.md  COMPLETION_EXECUTION_PLAN_2026-07-01.md  COMPLETION_PROGRESS_2026-07-01.md  DAYPART_LIGHTING_QA_2026-07-10.md  EXPRESSION_LIST_FOR_MOTION_IDEAS.md  EXPRESSION_PRESET_SYSTEM.md  GIT_TREE_POLICY.md  HOTFIX_V0.8.6_BACKGROUND_NEWS_2026-07-15.md  INFO_DISPLAY_UI_STYLE_REPORT_2026-07-09.md  INTEGRATION_PLAN_2026-06-19.md  INTEGRATION_REPORT_2026-06-19.md  LIFE_MODE_DESIGN_2026-06-12.md  LIFE_MODE_EXECUTION_PLAN_2026-06-13.md  LIFE_MODE_PHASE1_REPORT_2026-06-20.md  LIFE_MODE_PHASE1_VISUAL_QA_REPORT_2026-06-22.md  MAINLINE_VERSIONING.md  MOTION_PIPELINE_RESEARCH_2026-06-11.md  PCM_BPM_ROUTE_ASSESSMENT_2026-07-21.md  PERSONAL_NEWS_PANEL_PLAN_2026-07-06.md  PHASE0_TEST_PLAN_2026-06-12.md  PHASE0_TEST_RESULTS_2026-06-13.md  POSE_ASSET_SCHEMA_V1.md  POSE_COMPOSER_0_8_AUDIT.md  (+21 more)
(+250 files in other folders)
