[package]
name = "tohoku-companion"
version = "0.8.6"
description = "Tohoku Wallpaper Companion App"
authors = []
edition = "2021"

[lib]
name = "tohoku_companion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP server
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "fs"] }
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Outbound HTTP (weather / news / AI / Spotify). rustls avoids native OpenSSL.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
dirs = "5"
base64 = "0.22"
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"
